--- a/datasci_env.yml
+++ b/datasci_env.yml
@@ -1,24 +1,30 @@
 name: datasci-env
-
 channels:
   - defaults
   - conda-forge
+  - anaconda
+  - pytorch
 dependencies:
-  - python=3.11.0
-  - numpy=1.24.2
+  - python=3.9.15
+  - ipykernel=6.21.2
+  - numpy=1.22.4
   - pandas=1.5.3
-  - scipy=1.10.1
   - statsmodels=0.13.5
-  - matplotlib=3.7.0
-  - seaborn=0.12.2
+  # scipy cause conflict with seaborn, working combination are as follows
+  - scipy=1.7.3
+  - matplotlib=3.5.1
+  - seaborn=0.11.2
+  # ML packages
   - scikit-learn=1.2.1
+  - scikit-learn-intelex=2.23.0.2
   - xgboost=1.7.1
-  - tensorflow-base=2.10.0.
-  - keras=2.11.0
-  - pytorch=1.8.2
+  - tensorflow-base=2.10.0
+  - keras=2.10.0
+  - pytorch=1.13.1
+  - pulp=2.7.0
+  - ray-tune=2.3.0
   - scrapy=2.8.0
   - beautifulsoup4=4.11.2
-  - pillow=9.4.0
   - requests=2.28.2
   - pip=23.0.1
   # - pip:
