--- a/django_env.yml
+++ b/django_env.yml
@@ -9,8 +9,8 @@ dependencies:
   - ipykernel=6.19.2
   - numpy=1.23.5
   - pandas=1.5.3
-  - django
-  - virtualenv
+  - django=4.1.3
+  - virtualenv=20.17.1
   - boto3=1.26.83
   - pip=23.0.1
   - pip:
