--- a/webS3_env.yml
+++ b/webS3_env.yml
@@ -9,6 +9,8 @@ dependencies:
   - ipykernel=6.19.2
   - numpy=1.23.5
   - pandas=1.5.3
+  - matplotlib=3.7.1 
+  - pillow=9.0.0
   - boto3=1.26.83
   - pip=23.0.1
   - pip:
